# Citizens_Appeals

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: testing.yaml
.streamlit/: config.toml
django_settings/: settings.py
notebooks/: Advanced.ipynb  Baseline.ipynb  FullInference.ipynb  FullTrain.ipynb  Untitled.ipynb
notebooks/utils/: .gitignore  classifier.py  dataset.py  preprocess.py
project/source/: config.py  inference.py  main.py  utils.py
project/source/django_settings/: settings.py  urls.py
project/source/ml/: classifier.py  entity.py  inference.py  preprocess.py  sentiment.py  summary.py  trigger_word.py
project/source/static/css/: style.css
project/source/string_processing/: preprocess.py  string_processing.py  utilities.py  validator_string.py
project/source/templates/: base.html  dashboard.html  figure.html  main.html
project/source/web/: admin.py  apps.py  graph_plotter.py  models.py  ui.py  urls.py  views.py
project/source/web/migrations/: 0001_initial.py  0002_alter_appeal_date.py  0002_appeal_sentiment.py  0003_appeal_location_appeal_organisation_appeal_person.py  0004_rename_organisation_appeal_organization.py  0005_remove_appeal_location_remove_appeal_organization_and_more.py  0006_merge_20231124_1901.py
templates/: base.html  main.html
test_artmed/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_project.py
web/: views.py
